--- a/app/src/main/res/drawable/ic_file_icon.xml
+++ b/app/src/main/res/drawable/ic_file_icon.xml
@@ -21,7 +21,7 @@
 <vector android:autoMirrored="true" android:height="24dp"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#D5D5D5" android:fillType="nonZero"
+    <path android:fillColor="@color/bg_message_list_incoming_bubble" android:fillType="nonZero"
         android:pathData="M0,0l24,0l0,24l-24,0z" android:strokeAlpha="0"
         android:strokeColor="#000000" android:strokeWidth="1"/>
     <path android:fillColor="#FFFFFF" android:fillType="nonZero"
