Fix a few theming issues
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/presentation/src/main/res/drawable/shape_favorite_bubble.xml
+++ b/presentation/src/main/res/drawable/shape_favorite_bubble.xml
@@ -23,7 +23,7 @@
     <item>
         <shape
             android:shape="oval">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/bg_message_list_incoming_bubble"/>
         </shape>
     </item>
     <item android:drawable="@drawable/ic_star_black_24dp" android:tint="@color/grey_600"/>
