--- a/presentation/src/main/res/drawable/shape_call_bubble.xml
+++ b/presentation/src/main/res/drawable/shape_call_bubble.xml
@@ -23,7 +23,7 @@
     <item>
         <shape
             android:shape="oval">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/bg_message_list_incoming_bubble"/>
         </shape>
     </item>
     <item android:drawable="@drawable/ic_call_grey_600_24dp"/>
