--- a/app/src/main/res/layout/controller_browser.xml
+++ b/app/src/main/res/layout/controller_browser.xml
@@ -27,7 +27,7 @@
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/bottom_navigation"
@@ -53,7 +53,7 @@
         layout="@layout/fast_scroller"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/recycler_view"
-        android:layout_alignBottom="@id/recycler_view" />
+        android:layout_alignTop="@id/recyclerView"
+        android:layout_alignBottom="@id/recyclerView" />
 
 </RelativeLayout>
