--- a/app/src/main/res/drawable/asl_password_visibility.xml
+++ b/app/src/main/res/drawable/asl_password_visibility.xml
@@ -15,7 +15,8 @@
   limitations under the License.
   -->
 
-<animated-selector xmlns:android="http://schemas.android.com/apk/res/android">
+<animated-selector xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/visible"
@@ -29,11 +30,13 @@
     <transition
         android:fromId="@id/masked"
         android:toId="@id/visible"
-        android:drawable="@drawable/avd_show_password" />
+        android:drawable="@drawable/avd_show_password"
+        tools:ignore="PrivateResource" />
 
     <transition
         android:fromId="@id/visible"
         android:toId="@id/masked"
-        android:drawable="@drawable/avd_hide_password" />
+        android:drawable="@drawable/avd_hide_password"
+        tools:ignore="PrivateResource" />
 
 </animated-selector>
