--- a/app/src/main/res/layout/rv_item_notification_sound.xml
+++ b/app/src/main/res/layout/rv_item_notification_sound.xml
@@ -26,7 +26,6 @@
     android:animateLayoutChanges="true"
     android:orientation="vertical">
 
-
     <ImageView
         android:id="@+id/checkedImageView"
         android:layout_width="wrap_content"
@@ -42,16 +41,16 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toStartOf="@id/checkedImageView"
-        android:layout_toEndOf="@id/simpleDraweeView"
+        android:layout_toEndOf="@id/imageView"
         android:ellipsize="end"
         android:textAppearance="?android:attr/textAppearanceListItem" />
 
-    <com.facebook.drawee.view.SimpleDraweeView
-        android:id="@+id/simpleDraweeView"
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="@dimen/small_item_height"
         android:layout_height="@dimen/small_item_height"
+        android:background="@drawable/primary_circle"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="8dp"
-        app:roundAsCircle="true" />
+        android:layout_marginEnd="8dp" />
 
 </RelativeLayout>
