--- a/app/src/main/res/values/setup.xml
+++ b/app/src/main/res/values/setup.xml
@@ -23,8 +23,11 @@
     <!-- Set before a release -->
     <string name="nc_talk_database_encryption_key" translatable="false">HvAfHtAy/QdFYqAWFFXa1VV_Iv6ZQ1.tf5swMc^45wS_vz=Wm[oyRP5D-</string>
     <string name="nc_talk_login_scheme" translatable="false">nc</string>
+    <string name="nc_legacy_database_name">Nextcloud Talk</string>
     <bool name="nc_is_debug">false</bool>
 
+    <!-- App label shown on the home screen -->
+    <string name="nc_app_label">Talk</string>
     <string name="nc_app_name">Nextcloud Talk</string>
     <string name="nc_server_product_name">Nextcloud</string>
 
