--- a/app/src/main/res/layout/lobby_view.xml
+++ b/app/src/main/res/layout/lobby_view.xml
@@ -19,23 +19,23 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/lobby_view"
+    android:id="@+id/lobbyView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_default">
 
     <ImageView
-        android:id="@+id/lobby_image_view"
+        android:id="@+id/lobbyImageView"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_above="@id/lobby_text_view"
+        android:layout_above="@id/lobbyTextView"
         android:layout_centerHorizontal="true"
         android:layout_margin="@dimen/margin_between_elements"
         android:src="@drawable/ic_room_service_black_24dp"
         android:tint="@color/grey_600" />
 
     <TextView
-        android:id="@+id/lobby_text_view"
+        android:id="@+id/lobbyTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
