--- a/app/src/main/res/layout/call_item.xml
+++ b/app/src/main/res/layout/call_item.xml
@@ -58,12 +58,11 @@
         android:layout_marginBottom="8dp"
         android:textColor="@android:color/white" />
 
-    <com.facebook.drawee.view.SimpleDraweeView
+    <ImageView
         android:id="@+id/avatarImageView"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_centerInParent="true"
-        app:roundAsCircle="true" />
+        android:layout_centerInParent="true" />
 
     <org.webrtc.SurfaceViewRenderer
         android:id="@+id/surface_view"
