--- a/app/src/main/res/layout/controller_call.xml
+++ b/app/src/main/res/layout/controller_call.xml
@@ -66,49 +66,49 @@
             android:background="@android:color/transparent"
             android:gravity="center">
 
-            <com.facebook.drawee.view.SimpleDraweeView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <ImageView
                 android:id="@+id/call_control_microphone"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginStart="24dp"
                 android:alpha="0.7"
-                app:backgroundImage="@color/colorPrimary"
-                app:placeholderImage="@drawable/ic_mic_off_white_24px"
-                app:roundAsCircle="true" />
+                android:scaleType="centerInside"
+                android:background="@drawable/primary_color_circle"
+                android:src="@drawable/ic_mic_off_white_24px" />
 
-            <com.facebook.drawee.view.SimpleDraweeView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <ImageView
                 android:id="@+id/call_control_camera"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 android:alpha="0.7"
-                app:backgroundImage="@color/colorPrimary"
-                app:placeholderImage="@drawable/ic_videocam_white_24px"
-                app:roundAsCircle="true" />
+                android:scaleType="centerInside"
+                android:background="@drawable/primary_color_circle"
+                android:src="@drawable/ic_videocam_white_24px"/>
 
-            <com.facebook.drawee.view.SimpleDraweeView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <ImageView
                 android:id="@+id/callControlEnableSpeaker"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 android:visibility="gone"
-                app:backgroundImage="@color/colorPrimary"
-                app:placeholderImage="@drawable/ic_volume_mute_white_24dp"
-                app:roundAsCircle="true" />
+                android:scaleType="centerInside"
+                android:background="@drawable/primary_color_circle"
+                android:src="@drawable/ic_volume_mute_white_24dp" />
 
         </LinearLayout>
 
-        <com.facebook.drawee.view.SimpleDraweeView xmlns:app="http://schemas.android.com/apk/res-auto"
+        <ImageView
             android:id="@+id/callControlHangupView"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_above="@id/callControlsLinearLayoutView"
             android:layout_centerHorizontal="true"
-            app:backgroundImage="@color/nc_darkRed"
-            app:placeholderImage="@drawable/ic_call_end_white_24px"
-            app:roundAsCircle="true" />
+            android:background="@drawable/negative_color_circle"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_call_end_white_24px"/>
     </RelativeLayout>
 
     <FrameLayout
@@ -125,20 +125,23 @@
             android:layout_margin="16dp"
             android:visibility="invisible" />
 
-        <com.facebook.drawee.view.SimpleDraweeView xmlns:app="http://schemas.android.com/apk/res-auto"
+        <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/call_control_switch_camera"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center_horizontal|bottom"
             android:layout_marginBottom="20dp"
-            app:backgroundImage="@color/colorPrimary"
-            app:placeholderImage="@drawable/ic_switch_video_white_24px"
-            app:roundAsCircle="true" />
+            android:visibility="visible"
+            android:scaleType="centerInside"
+            android:background="@drawable/primary_color_circle"
+            android:src="@drawable/ic_switch_video_white_24px"
+ />
 
     </FrameLayout>
 
     <include
         layout="@layout/call_states"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 </RelativeLayout>
