--- a/app/src/main/res/layout/controller_call_notification.xml
+++ b/app/src/main/res/layout/controller_call_notification.xml
@@ -39,34 +39,34 @@
         android:animateLayoutChanges="true"
         android:orientation="horizontal">
 
-        <com.facebook.drawee.view.SimpleDraweeView
+        <ImageView
             android:id="@+id/callAnswerVoiceOnlyView"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_margin="24dp"
             android:visibility="gone"
-            app:backgroundImage="@color/nc_darkGreen"
-            app:placeholderImage="@drawable/ic_call_white_24dp"
-            app:roundAsCircle="true" />
+            android:scaleType="centerInside"
+            android:background="@color/nc_darkGreen"
+            android:src="@drawable/ic_call_white_24dp" />
 
-        <com.facebook.drawee.view.SimpleDraweeView
+        <ImageView
             android:id="@+id/callControlHangupView"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_margin="24dp"
-            app:backgroundImage="@color/nc_darkRed"
-            app:placeholderImage="@drawable/ic_call_end_white_24px"
-            app:roundAsCircle="true" />
+            android:scaleType="centerInside"
+            android:background="@drawable/negative_color_circle"
+            android:src="@drawable/ic_call_end_white_24px" />
 
-        <com.facebook.drawee.view.SimpleDraweeView
+        <ImageView
             android:id="@+id/callAnswerCameraView"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_margin="24dp"
             android:visibility="gone"
-            app:backgroundImage="@color/nc_darkGreen"
-            app:placeholderImage="@drawable/ic_videocam_white_24px"
-            app:roundAsCircle="true" />
+            android:scaleType="centerInside"
+            android:background="@color/nc_darkGreen"
+            android:src="@drawable/ic_videocam_white_24px" />
     </LinearLayout>
 
     <RelativeLayout
