--- a/app/src/main/res/layout/item_custom_incoming_preview_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_preview_message.xml
@@ -32,12 +32,12 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/messageUserAvatar">
 
-        <com.facebook.drawee.view.SimpleDraweeView
+        <ImageView
             android:id="@id/image"
             android:layout_width="@dimen/minimum_file_preview_size"
             android:layout_height="@dimen/minimum_file_preview_size"
             android:adjustViewBounds="true"
-            app:actualImageScaleType="fitCenter" />
+            android:scaleType="fitCenter" />
 
         <com.google.android.flexbox.FlexboxLayout
             android:layout_width="wrap_content"
@@ -79,13 +79,13 @@
 
     </RelativeLayout>
 
-    <com.facebook.drawee.view.SimpleDraweeView
+    <ImageView
         android:id="@id/messageUserAvatar"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginEnd="8dp"
-        app:roundAsCircle="true" />
+        />
 
 </RelativeLayout>
