--- a/app/src/main/res/layout/item_custom_incoming_text_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_text_message.xml
@@ -27,13 +27,12 @@
     android:layout_marginRight="16dp"
     android:layout_marginBottom="2dp">
 
-    <com.facebook.drawee.view.SimpleDraweeView
+    <ImageView
         android:id="@id/messageUserAvatar"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="8dp"
-        app:roundAsCircle="true" />
+        android:layout_marginEnd="8dp" />
 
     <com.google.android.flexbox.FlexboxLayout
         android:id="@id/bubble"
