--- a/app/src/main/res/layout/item_custom_outcoming_preview_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_preview_message.xml
@@ -27,13 +27,13 @@
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="2dp">
 
-    <com.facebook.drawee.view.SimpleDraweeView
+    <ImageView
         android:id="@id/image"
         android:layout_width="@dimen/minimum_file_preview_size"
         android:layout_height="@dimen/minimum_file_preview_size"
         android:layout_alignParentEnd="true"
         android:adjustViewBounds="true"
-        app:actualImageScaleType="fitCenter" />
+        android:scaleType="fitCenter" />
 
     <com.google.android.flexbox.FlexboxLayout
         android:layout_width="wrap_content"
