--- a/app/src/main/res/layout/rv_item_notification_sound.xml
+++ b/app/src/main/res/layout/rv_item_notification_sound.xml
@@ -49,7 +49,7 @@
         android:id="@+id/imageView"
         android:layout_width="@dimen/small_item_height"
         android:layout_height="@dimen/small_item_height"
-        android:background="@drawable/primary_circle"
+        android:background="@drawable/primary_color_circle"
         android:layout_centerVertical="true"
         android:layout_marginEnd="8dp" />
 
