--- a/app/src/main/res/layout/item_custom_incoming_preview_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_preview_message.xml
@@ -22,28 +22,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginStart="16dp"
     android:layout_marginTop="2dp"
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="2dp">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/messageUserAvatar">
-
-        <ImageView
-            android:id="@id/image"
-            android:layout_width="@dimen/minimum_file_preview_size"
-            android:layout_height="@dimen/minimum_file_preview_size"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter" />
 
         <com.google.android.flexbox.FlexboxLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/image"
-            android:layout_alignStart="@+id/image"
+            android:layout_toEndOf="@+id/messageUserAvatar"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:orientation="vertical"
@@ -51,6 +40,17 @@
             app:alignItems="stretch"
             app:flexWrap="wrap"
             app:justifyContent="flex_end">
+
+            <ImageView
+                android:id="@id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:scaleType="centerInside"
+                app:layout_flexGrow="1"
+                app:layout_wrapBefore="true"
+                app:layout_alignSelf="flex_start"
+                tools:src="@tools:sample/backgrounds/scenic"/>
 
             <androidx.emoji.widget.EmojiTextView
                 android:id="@id/messageText"
@@ -76,7 +76,6 @@
 
         </com.google.android.flexbox.FlexboxLayout>
 
-    </RelativeLayout>
 
     <ImageView
         android:id="@id/messageUserAvatar"
