--- a/app/src/main/res/layout/item_custom_incoming_text_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_text_message.xml
@@ -46,6 +46,8 @@
         app:flexWrap="wrap"
         app:justifyContent="flex_end">
 
+        <include layout="@layout/item_message_quote" android:visibility="gone"/>
+
         <androidx.emoji.widget.EmojiTextView
             android:id="@+id/messageAuthor"
             android:layout_width="match_parent"
