--- a/app/src/main/res/layout/item_custom_outcoming_text_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_text_message.xml
@@ -38,6 +38,8 @@
         app:flexWrap="wrap"
         app:justifyContent="flex_end">
 
+        <include layout="@layout/item_message_quote" android:visibility="gone"/>
+
         <androidx.emoji.widget.EmojiTextView
             android:id="@id/messageText"
             android:layout_width="wrap_content"
