--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,6 +31,7 @@
         <item name="android:textColor">@color/nc_incoming_text_default</item>
         <item name="android:popupMenuStyle">@style/appActionBarPopupMenu</item>
         <item name="actionOverflowMenuStyle">@style/appActionBarPopupMenu</item>
+        <item name="android:statusBarColor">@color/colorPrimary</item>
         <item name="actionBarStyle">@style/appActionBarStyle</item>
     </style>
 
