--- a/app/src/main/res/layout/item_message_quote.xml
+++ b/app/src/main/res/layout/item_message_quote.xml
@@ -41,12 +41,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/quotedUserAvatar"
         android:layout_alignStart="@id/quotedUserAvatar"
+        android:layout_toStartOf="@id/cancelReplyButton"
         android:layout_marginTop="4dp"
         android:orientation="vertical"
         app:alignContent="stretch"
         app:alignItems="stretch"
         app:flexWrap="wrap"
-        app:justifyContent="flex_end">
+        app:justifyContent="flex_start">
 
         <ImageView
             android:id="@+id/quotedMessageImage"
@@ -79,9 +80,22 @@
             android:layout_marginStart="8dp"
             android:textSize="12sp"
             app:layout_alignSelf="center"
+            android:textColor="@color/warm_grey_four"
             tools:text="16:08" />
         />
 
     </com.google.android.flexbox.FlexboxLayout>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/ic_cancel_black_24dp"
+        android:backgroundTint="@color/grey_600"
+        android:id="@+id/cancelReplyButton"/>
 
 </RelativeLayout>
