--- a/app/src/main/res/layout/view_states.xml
+++ b/app/src/main/res/layout/view_states.xml
@@ -40,6 +40,7 @@
       android:id="@+id/stateWithMessageView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:visibility="gone"
       >
 
     <ImageView
