--- a/app/src/main/res/values/setup.xml
+++ b/app/src/main/res/values/setup.xml
@@ -50,4 +50,7 @@
     <string name="google_app_id" translatable="false">1:829118773643:android:54b65087c544d819</string>
     <string name="google_crash_reporting_api_key" translatable="false">AIzaSyAWIyOcLafaFp8PFL61h64cy1NNZW2cU_s</string>
     <string name="google_storage_bucket" translatable="false">nextcloud-a7dea.appspot.com</string>
+
+    <!-- Other things -->
+    <string name="nc_text_share_target">com.nextcloud.talk.newarch.services.shortcuts.category.TEXT_SHARE_TARGET</string>
 </resources>
