Fix up some of the issues with new search
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
     <com.nextcloud.talk.newarch.utils.ChangeHandlerCoordinatorLayout
         android:id="@+id/controller_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_behavior="com.nextcloud.talk.utils.FABAwareScrollingViewBehavior"
         />
 
