--- a/app/src/main/res/layout/item_custom_outcoming_preview_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_preview_message.xml
@@ -20,34 +20,37 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginStart="16dp"
     android:layout_marginTop="2dp"
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="2dp">
 
-    <com.facebook.drawee.view.SimpleDraweeView
-        android:id="@id/image"
-        android:layout_width="@dimen/minimum_file_preview_size"
-        android:layout_height="@dimen/minimum_file_preview_size"
-        android:layout_alignParentEnd="true"
-        android:adjustViewBounds="true"
-        app:actualImageScaleType="fitCenter" />
-
     <com.google.android.flexbox.FlexboxLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/image"
-        android:layout_alignStart="@+id/image"
-        android:layout_alignEnd="@id/image"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:orientation="vertical"
+        android:layout_alignParentEnd="true"
         app:alignContent="stretch"
         app:alignItems="stretch"
         app:flexWrap="wrap"
         app:justifyContent="flex_end">
+
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@id/image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            app:layout_flexGrow="1"
+            app:layout_wrapBefore="true"
+            app:layout_alignSelf="flex_start"
+            app:actualImageScaleType="fitCenter"
+            tools:src="@tools:sample/backgrounds/scenic"/>
 
         <androidx.emoji.widget.EmojiTextView
             android:id="@id/messageText"
@@ -67,6 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_marginStart="8dp"
             android:textColor="@color/warm_grey_four"
             app:layout_alignSelf="center" />
     </com.google.android.flexbox.FlexboxLayout>
