--- a/app/src/main/res/layout/item_message_quote.xml
+++ b/app/src/main/res/layout/item_message_quote.xml
@@ -14,24 +14,15 @@
         android:layout_alignBottom="@id/flexboxQuoted"
         android:layout_alignParentStart="true"
         android:layout_marginEnd="4dp"
-        android:background="@color/colorPrimary"></View>
-
-    <ImageView
-        android:id="@+id/quotedUserAvatar"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="4dp"
-        android:layout_toEndOf="@id/quoteColoredView"
-        tools:src="@tools:sample/avatars[0]" />
+        android:background="@color/colorPrimary"/>
 
     <androidx.emoji.widget.EmojiTextView
         android:id="@+id/quotedMessageAuthor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/quotedUserAvatar"
+        android:layout_alignParentTop="true"
         android:layout_marginEnd="8dp"
-        android:layout_toEndOf="@id/quotedUserAvatar"
+        android:layout_marginStart="8dp"
         android:ellipsize="end"
         android:textSize="12sp"
         tools:text="Mario" />
@@ -40,8 +31,8 @@
         android:id="@+id/flexboxQuoted"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/quotedUserAvatar"
-        android:layout_alignStart="@id/quotedUserAvatar"
+        android:layout_below="@id/quotedMessageAuthor"
+        android:layout_alignStart="@id/quotedMessageAuthor"
         android:layout_toStartOf="@id/cancelReplyButton"
         android:layout_marginTop="4dp"
         android:orientation="vertical"
@@ -66,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/quotedMessageImage"
-            android:layout_alignStart="@id/quotedUserAvatar"
+            android:layout_alignStart="@id/quotedMessageAuthor"
             android:lineSpacingMultiplier="1.2"
             android:textSize="14sp"
             app:layout_alignSelf="flex_start"
@@ -83,8 +74,6 @@
             app:layout_alignSelf="center"
             android:textColor="@color/warm_grey_four"
             tools:text="16:08" />
-        />
-
     </com.google.android.flexbox.FlexboxLayout>
 
     <ImageButton
